# arm

./: .gitignore  CMakeLists.txt  build.sh
include/robotics/: dynframe.hpp  dynrobotarm.hpp  endeffector.hpp  frame.hpp  robot.hpp  robotarm.hpp  utils.hpp
include/tmp/: tmp.hpp
src/: main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  test.cpp
src/robotics/: dynframe.cpp  dynrobotarm.cpp  endeffector.cpp  frame.cpp  robotarm.cpp  utils.cpp
src/tmp/: e.cpp  main.cpp  main2.cpp  tmp.cpp  tmp1.cpp
